# SuperJson

./: README.md
source/: CMakeLists.txt  sjtree.c  sjtree.h  superjson.c  superjson.h
source/tests/: CMakeLists.txt  test_sj01.c  test_sj01.h  test_sjtree01.c  test_sjtree01.h
source/tests/testfiles/: test02.json  test02_broken.json  test03.json
